Update PermissionDataHolder.java
Added default value for permission types if needed.