@@ -5,6 +5,7 @@ import yorickbm.skyblockaddon.util.JSON.JSONSerializable;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class PermissionDataHolder implements JSONSerializable {
 
@@ -12,6 +13,7 @@ public class PermissionDataHolder implements JSONSerializable {
     protected String[] items;
     protected String[] blocks;
     protected String[] entities;
+    protected boolean defaults = false;
 
     @Override
     public String toJSON() {
@@ -28,10 +30,15 @@ public class PermissionDataHolder implements JSONSerializable {
         this.items = temp.items;
         this.blocks = temp.blocks;
         this.entities = temp.entities;
+        this.defaults = temp.defaults;
     }
 
-    public List<String> getSkyblockaddonData() { return Arrays.stream(this.skyblockaddon).toList(); }
-    public List<String> getItemsData() { return Arrays.stream(this.items).toList(); }
-    public List<String> getBlocksData() { return Arrays.stream(this.blocks).toList(); }
-    public List<String> getEntitiesData() { return Arrays.stream(this.entities).toList(); }
+    public List<String> getSkyblockaddonData() { return Arrays.stream(this.skyblockaddon).collect(Collectors.toList()); }
+    public List<String> getItemsData() { return Arrays.stream(this.items).collect(Collectors.toList()); }
+    public List<String> getBlocksData() { return Arrays.stream(this.blocks).collect(Collectors.toList()); }
+    public List<String> getEntitiesData() { return Arrays.stream(this.entities).collect(Collectors.toList()); }
+
+    public boolean getDefault() {
+        return this.defaults;
+    }
 }
